generator client {
  provider = "prisma-client-js"
}

// generator typegraphql {
//   provider = "typegraphql-prisma"
//   output   = "../prisma/generated/type-graphql"
// }

datasource db {
  provider          = "postgresql"
  url               = env("DATABASE_URL")
  // If you use Neon for development environment, create a separate Neon project for Prisma shadow database
  // https://neon.tech/docs/quickstart/prisma/#step-2-using-neon-for-development-with-prisma
  shadowDatabaseUrl = env("SHADOW_DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model CareRoutine {
  id           Int             @id @default(autoincrement())
  plantId      Int             @unique
  routineSteps RoutineStep[]
  isCompleted  Boolean         @default(false)
  isActive     Boolean         @default(true)
  isShared     Boolean         @default(false)
  flag         userContentFlag @default(default)
  createdAt    DateTime        @default(now())
  updatedAt    DateTime?       @updatedAt

  plant Plant @relation(fields: [plantId], references: [id])
}

model RoutineStep {
  id             Int                      @id @default(autoincrement())
  careRoutineId  Int
  description    String?                  @default("") @db.VarChar(500)
  stepFrequency  careRoutineStepFrequency @default(default)
  otherFrequency String?                  @db.VarChar(40)
  isCompleted    Boolean                  @default(false)
  completedAt    DateTime?                @db.Timestamptz(6)
  createdAt      DateTime                 @default(now())
  updatedAt      DateTime                 @updatedAt

  careRoutine CareRoutine @relation(fields: [careRoutineId], references: [id])
}

model Plant {
  id             Int            @id @default(autoincrement())
  plantName      String         @db.VarChar(255)
  plantTypeId    Int
  plantImage     String?        @default("") @db.VarChar
  careRoutine    CareRoutine?
  plantState     plantState     @default(default)
  plantPlacement plantPlacement @default(default)
  createdAt      DateTime       @default(now())
  updatedAt      DateTime?      @updatedAt
  userId         Int

  user      User      @relation(fields: [userId], references: [id])
  plantType PlantType @relation(fields: [plantTypeId], references: [id])
}

model PlantType {
  id             Int       @id @default(autoincrement())
  species        String?   @default("") @db.VarChar(255)
  type           String?   @default("") @db.VarChar(255)
  description    String?   @default("") @db.VarChar(1000)
  plantTypeImage String?   @default("https://res.cloudinary.com/dv1dmymg2/image/upload/v1673187625/PlantBuddy/PlantTypes/template_primary_tofeqr.jpg") @db.VarChar
  createdAt      DateTime? @default(now())
  updatedAt      DateTime? @updatedAt
  plants         Plant[]
}

model Community {
  id                   Int              @id @default(autoincrement())
  communityName        String           @db.VarChar(255)
  communityBigImage    String           @default("https://res.cloudinary.com/dv1dmymg2/image/upload/c_fill,h_256,w_512,x_0/v1673289877/PlantBuddy/Communities/BackgroundHeaders/DALL_E_2023-01-09_19.42.52_-_corporateStyle_people_figures_smiling_and_talking_surrounded_by_lots_of_different_home_plants_klh4dh.png") @db.VarChar()
  communitySmallImage  String           @default("https://res.cloudinary.com/dv1dmymg2/image/upload/v1673187625/PlantBuddy/PlantTypes/template_primary_tofeqr.jpg") @db.VarChar()
  communityDescription String           @db.VarChar(1000) @default("Hop in!")
  posts                Post[]
  users                CommunityUsers[]
  isActive             Boolean          @default(true)
  createdAt            DateTime?        @default(now())
  updatedAt            DateTime?        @updatedAt
}

model Post {
  id             Int             @id @default(autoincrement())
  communityId    Int
  userName       String
  postBody       String?         @default("") @db.VarChar(2000)
  comments       Comment[]
  image          String?         @default("") @db.VarChar
  points         Int             @default(0)
  flag           userContentFlag @default(default)
  isAnnouncement Boolean         @default(false)
  createdAt      DateTime?       @default(now())
  updatedAt      DateTime?       @updatedAt

  user      User      @relation(fields: [userName], references: [userName])
  community Community @relation(fields: [communityId], references: [id])
}

model Comment {
  id          Int             @id @default(autoincrement())
  postId      Int
  userName    String
  commentBody String          @db.VarChar(500)
  image       String?         @default("") @db.VarChar
  points      Int             @default(0)
  flag        userContentFlag @default(default)
  createdAt   DateTime?       @default(now())
  updatedAt   DateTime?       @updatedAt

  user User @relation(fields: [userName], references: [userName])
  post Post @relation(fields: [postId], references: [id])
}

model User {
  id             Int              @id @default(autoincrement())
  name           String           @db.VarChar(100)
  userName       String           @unique @db.VarChar(100)
  email          String           @unique @db.VarChar(255)
  phoneNumber    String?          @db.VarChar(15)
  password       String           @db.VarChar(255)
  profilePicture String?          @default("") @db.VarChar
  gender         gender           @default(other)
  plants         Plant[]
  badges         UserBadges[] //wiele do wielu z tabelą
  communities    CommunityUsers[]
  posts          Post[]
  comments       Comment[]
  points         Int              @default(0)
  userType       userType         @default(user)
  active         Boolean          @default(true)
  createdAt      DateTime?        @default(now())
  updatedAt      DateTime?        @updatedAt
}

model Badge {
  id               Int          @id @default(autoincrement())
  badgeName        String       @db.VarChar(255)
  points           Int          @default(0)
  badgeDescription String       @default("") @db.VarChar
  badgeImage       String?      @default("") @db.VarChar
  users            UserBadges[] //wiele do wielu z tabelą
  createdAt        DateTime?    @default(now())
  updatedAt        DateTime?    @updatedAt
}

//tabela do relacji wiele badge dla wielu userow
model UserBadges {
  userId Int
  user   User @relation(fields: [userId], references: [id])

  badgeId Int
  badge   Badge @relation(fields: [badgeId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@id([userId, badgeId])
}

model CommunityUsers {
  userId      Int
  user        User      @relation(fields: [userId], references: [id])
  communityId Int
  community   Community @relation(fields: [communityId], references: [id])
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@id([userId, communityId])
}

enum userType {
  user
  admin
}

enum careRoutineStepFrequency {
  threeTimesADay
  twoTimesADay
  daily
  everyTwoDays
  everyThreeDays
  everyFourDays
  everyFiveDays
  everySixDays
  weekly
  everyTwoWeeks
  everyThreeWeeks
  onceAMonth
  onceAYear
  other
  default
}

enum userContentFlag {
  offfensive
  useful
  best
  default
}

enum plantState {
  thriving
  good
  needsAttention
  thirsty
  forgotten
  dead
  default
}

enum plantPlacement {
  inside
  outside
  default
}

enum gender {
  male
  female
  other
  preferNotToTell
}
