//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table CareRoutine {
  id Int [pk, increment]
  plantId Int [unique, not null]
  routineSteps RoutineStep [not null]
  isCompleted Boolean [not null, default: false]
  isActive Boolean [not null, default: true]
  isShared Boolean [not null, default: false]
  flag userContentFlag [not null, default: 'default']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  plant Plant [not null]
}

Table RoutineStep {
  id Int [pk, increment]
  careRoutineId Int [not null]
  description String [default: '']
  stepFrequency careRoutineStepFrequency [not null, default: 'default']
  otherFrequency String
  isCompleted Boolean [not null, default: false]
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  careRoutine CareRoutine [not null]
}

Table Plant {
  id Int [pk, increment]
  plantName String [not null]
  plantTypeId Int [not null]
  plantImage String [default: '']
  careRoutine CareRoutine
  plantState plantState [not null, default: 'default']
  plantPlacement plantPlacement [not null, default: 'default']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  user User [not null]
  plantType PlantType [not null]
}

Table PlantType {
  id Int [pk, increment]
  species String [default: '']
  type String [default: '']
  description String [default: '']
  plantTypeImage String [default: 'https://res.cloudinary.com/dv1dmymg2/image/upload/v1673187625/PlantBuddy/PlantTypes/template_primary_tofeqr.jpg']
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  plants Plant [not null]
}

Table Community {
  id Int [pk, increment]
  communityName String [not null]
  communityBigImage String [not null, default: 'https://res.cloudinary.com/dv1dmymg2/image/upload/c_fill,h_256,w_512,x_0/v1673289877/PlantBuddy/Communities/BackgroundHeaders/DALL_E_2023-01-09_19.42.52_-_corporateStyle_people_figures_smiling_and_talking_surrounded_by_lots_of_different_home_plants_klh4dh.png']
  communitySmallImage String [not null, default: 'https://res.cloudinary.com/dv1dmymg2/image/upload/v1673187625/PlantBuddy/PlantTypes/template_primary_tofeqr.jpg']
  communityDescription String [not null, default: 'Hop in!']
  posts Post [not null]
  users CommunityUsers [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Post {
  id Int [pk, increment]
  communityId Int [not null]
  userName String [not null]
  postBody String [default: '']
  comments Comment [not null]
  image String [default: '']
  points Int [not null, default: 0]
  flag userContentFlag [not null, default: 'default']
  isAnnouncement Boolean [not null, default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  user User [not null]
  community Community [not null]
}

Table Comment {
  id Int [pk, increment]
  postId Int [not null]
  userName String [not null]
  commentBody String [not null]
  image String [default: '']
  points Int [not null, default: 0]
  flag userContentFlag [not null, default: 'default']
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  user User [not null]
  post Post [not null]
}

Table User {
  id Int [pk, increment]
  name String [not null]
  userName String [unique, not null]
  email String [unique, not null]
  phoneNumber String
  password String [not null]
  profilePicture String [default: '']
  gender gender [not null, default: 'other']
  plants Plant [not null]
  badges UserBadges [not null]
  communities CommunityUsers [not null]
  posts Post [not null]
  comments Comment [not null]
  points Int [not null, default: 0]
  userType userType [not null, default: 'user']
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Badge {
  id Int [pk, increment]
  badgeName String [not null]
  points Int [not null, default: 0]
  badgeDescription String [not null, default: '']
  badgeImage String [default: '']
  users UserBadges [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table UserBadges {
  userId Int [not null]
  user User [not null]
  badgeId Int [not null]
  badge Badge [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, badgeId) [pk]
  }
}

Table CommunityUsers {
  userId Int [not null]
  user User [not null]
  communityId Int [not null]
  community Community [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, communityId) [pk]
  }
}

Enum userType {
  user
  admin
}

Enum careRoutineStepFrequency {
  threeTimesADay
  twoTimesADay
  daily
  everyTwoDays
  everyThreeDays
  everyFourDays
  everyFiveDays
  everySixDays
  weekly
  everyTwoWeeks
  everyThreeWeeks
  onceAMonth
  onceAYear
  other
  default
}

Enum userContentFlag {
  offfensive
  useful
  best
  default
}

Enum plantState {
  thriving
  good
  needsAttention
  thirsty
  forgotten
  dead
  default
}

Enum plantPlacement {
  inside
  outside
  default
}

Enum gender {
  male
  female
  other
  preferNotToTell
}

Ref: CareRoutine.plantId - Plant.id

Ref: RoutineStep.careRoutineId > CareRoutine.id

Ref: Plant.userId > User.id

Ref: Plant.plantTypeId > PlantType.id

Ref: Post.userName > User.userName

Ref: Post.communityId > Community.id

Ref: Comment.userName > User.userName

Ref: Comment.postId > Post.id

Ref: UserBadges.userId > User.id

Ref: UserBadges.badgeId > Badge.id

Ref: CommunityUsers.userId > User.id

Ref: CommunityUsers.communityId > Community.id